--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node script.ts",
-    "dev": "nodemon script.ts"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^18.6.5",
     "nodemon": "^2.0.19",
-    "prisma": "^4.2.0",
+    "prisma": "^4.2.1",
+    "prisma-dbml-generator": "^0.9.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.2.0"
+    "@prisma/client": "^4.2.0",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   }
 }
